fixed input size and spacing for pantry items edit

--- a/src/components/PantryItem/PantryItem.css
+++ b/src/components/PantryItem/PantryItem.css
@@ -60,6 +60,7 @@
 .PantryItem-button-container-right {
     display: flex;
     flex-direction: row;
+    height: 100%;
 }
 
 .PantryItem-count-container {
